<resources>
    <string name="app_name">ShoeStore</string>
    <string name="editUsernameText">Please enter your username</string>
    <string name="editPasswordText">Please enter your password</string>
    <string name="login_text">Login</string>
    <string name="CreateAccount">Create Account</string>
    <string name="Login">Login</string>
    <string name="welcomeText">Welcome!</string>
    <string name="subtitleText">Pick out your perfect shoe</string>
    <string name="continueButton">Continue</string>
    <string name="page_title">Instructions</string>
    <string name="InstructionsText">Pick a shoe to order</string>
    <string name="InstructionsNavButton">Go to shoes</string>
    <string name="add_new_shoe">Add new shoe</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="shoe_description">Description</string>
    <string name="shoe_name">Name</string>
    <string name="shoe_company">Company</string>
    <string name="shoe_size">Size</string>
    <!--    <string name="shoe_name">Name</string>-->
<!--    <string name="shoe_company">Company</string>-->
<!--    <string name="shoe_size">Size</string>-->
<!--    <string name="shoe_description">Description</string>-->

</resources>
