<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/editUsernameText"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        tools:context=".LoginFragment">


        <EditText
            android:id="@+id/editTextEmailAddress"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="24dp"
            android:ems="10"
            android:hint="@string/editUsernameText"
            android:inputType="textEmailAddress"
            app:layout_constraintBottom_toTopOf="@+id/editTextTextPassword"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textLoginText" />

        <EditText
            android:id="@+id/editTextTextPassword"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="74dp"
            android:ems="10"
            android:hint="@string/editPasswordText"
            android:inputType="textPassword"
            app:layout_constraintBottom_toTopOf="@+id/buttonLogin"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editTextEmailAddress" />

        <TextView
            android:id="@+id/textLoginText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="112dp"
            android:layout_marginEnd="148dp"
            android:layout_marginBottom="123dp"
            android:text="@string/login_text"
            android:textSize="34sp"
            app:layout_constraintBottom_toTopOf="@+id/editTextEmailAddress"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/buttonLogin"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            android:text="@string/Login"
            app:layout_constraintBottom_toTopOf="@+id/buttonCreateAccount"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editTextTextPassword" />

        <Button
            android:id="@+id/buttonCreateAccount"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="160dp"
            android:text="@string/CreateAccount"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/buttonLogin" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>