<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        tools:context=".InstructionsFragment">


        <TextView
            android:id="@+id/textInstructionsTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="76dp"
            android:layout_marginEnd="100dp"
            android:text="@string/page_title"
            android:textSize="34sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textInstructionsText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="230dp"
            android:text="@string/InstructionsText"
            app:layout_constraintEnd_toEndOf="@+id/textInstructionsTitle"
            app:layout_constraintStart_toStartOf="@+id/textInstructionsTitle"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="134dp"
            android:layout_marginBottom="111dp"
            android:text="@string/InstructionsNavButton"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>