<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="shoe"
            type="com.udacity.shoestore.models.Shoe" />
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/shoe_name" />

            <EditText
                android:id="@+id/shoe_name_edit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@={shoe.name}" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/shoe_company" />

            <EditText
                android:id="@+id/company_edit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@={shoe.company}" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/shoe_size" />

            <EditText
                android:id="@+id/shoe_size_edit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal"
                android:text="@={shoe.size}" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Description" />

            <EditText
                android:id="@+id/description_edit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@={shoe.description}" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center"
                android:layout_marginTop="16dp">

                <Button
                    android:id="@+id/cancel_button"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:text="Cancel" />

                <Button
                    android:id="@+id/save_button"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:text="Save" />
            </LinearLayout>

        </LinearLayout>
    </ScrollView>
</layout>